<resources>
    <string name="app_name">Delivery Service</string>

    <string name="emailpassword_title_text">Email and Password</string>
    <string name="sign_out">Sign Out</string>

    <string name="facebook_application_id" translatable="false">458676771178173</string>
    <string name="fb_login_protocol_scheme">fb458676771178173</string>
    <string name="nav_title_sales">Sales</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="action_log_device_id">Log Device Id</string>
    <string name="key_pref_token_sent">key_pref_token_sent</string>
    <string name="label_settings">Settings</string>
    <string name="prompt_firstname">First Name</string>
    <string name="label_customer_info">Customer Information</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="action_add_customer">Add New Customer</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="label_customer_location">Customer Address</string>
    <string name="action_select_location">Select Location</string>
    <string name="action_select_address">Select Address</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="order_booked">Order Booked</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="select_pickup_location_title">Select the pickup location</string>
    <string name="select_delivery_location_title">Select a delivery location</string>
    <string name="label_billing_info">Billing Details</string>
    <string name="ok">OK</string>
    <string name="activity_title_checkout">Order Checkout</string>
    <string name="action_driver_filter">Map Filter</string>
    <string name="title_delivery_date">Delivery Date</string>
    <string name="content_description_select_order_date">select order date</string>
    <string name="title_order_details">ORDER DETAILS</string>
    <string name="content_description_order_details">order details</string>
    <string name="content_description_payment">payment</string>
    <string name="title_payment">PAYMENT</string>
    <string name="content_description_success">success</string>
    <string name="title_success">SUCCESS</string>
    <string name="title_pickup_location">Pickup Location</string>
    <string name="title_delivery_location">Delivery Location</string>
    <string name="btn_next_payment">NEXT - PAYMENT</string>
    <string name="btn_add_location">ADD LOCATION</string>
    <string name="title_user_location_list">User Location List</string>
    <string name="content_description_select_pickup_location">select pickup location</string>
    <string name="contednt_description_select_delivery_location">select delivery location</string>
    <string name="msg_all_fields_are_required">All fields are required.</string>
    <string name="title_order_detail">Order Details</string>
    <string name="title_credit_card_details">Credit Card Details</string>
    <string name="content_description_expiry_date">expiry date</string>
    <string name="msg_mm_yyyy">MM/YYYY</string>
    <string name="hint_xxxx">XXXX</string>
    <string name="content_description_credit_card_icon">credit card icon</string>
    <string name="content_description_svc_number">svc number</string>
    <string name="btn_place_order">PLACE ORDER</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="hint_xxx">XXX</string>
    <string name="title_driver_information">Driver Information</string>
    <string name="button_verify_driver">Verify Driver</string>
    <string name="msg_this_driver_has_been_verified">This driver has been verified.</string>
    <string name="title_pickup_and_delivery_locations">Pickup and Delivery Locations</string>
    <string name="content_description_google_icon">google icon</string>
    <string name="content_description_add_location_button">add location button</string>
    <string name="title_company">Company</string>
    <string name="title_contact_name">Contact Name</string>
    <string name="title_contact_phone">Contact Phone</string>
    <string name="title_email">Email</string>
    <string name="title_billing_address">Billing Address</string>
    <string name="title_add_customer">Add Customer</string>
    <string name="title_select_customer">Select Customer</string>
    <string name="content_description_customer_select_icon">customer select icon</string>
    <string name="title_select_pickup_date">Select Pickup date</string>
    <string name="content_description_date_select_icon">date select icon</string>
    <string name="title_select_pickup_location">Select Pickup Location</string>
    <string name="content_description_select_pickup_location_icon">select pickup location icon</string>
    <string name="title_select_delivery_location">Select Delivery Location</string>
    <string name="btn_book_phone_order">BOOK PHONE ORDER</string>
    <string name="content_description_select_delivery_location_icon">select delivery location icon</string>
    <string name="title_order_number">Order Number</string>
    <string name="title_distance">Distance</string>
    <string name="title_cost">Cost</string>
    <string name="title_order_status">Order Status</string>
    <string name="title_order_type">Order Type</string>
    <string name="title_driver_list">Driver List</string>
    <string name="assign_driver_cancelled">Assign driver cancelled.</string>
    <string name="title_order_driver_assigned">Driver Assigned</string>
    <string name="msg_there_are_no_customers_to_show">There are no customers to show.</string>
    <string name="msg_there_are_no_drivers_to_show">There are no drivers to show.</string>
    <string name="msg_there_are_no_orders_to_show">There are no orders to show for the selected date.</string>
    <string name="alert_confirm_new_order">Please confirm a new order for:</string>
    <string name="title_app_admin_application">Admin Application</string>
    <string name="msg_initializing_app">Initializing App ...</string>
    <string name="app_name_full">Kan-Tech Delivery Service</string>
    <string name="btn_add_customer">ADD CUSTOMER</string>
    <string name="content_description_driver_icon">driver icon</string>
    <string name="content_description_location_icon">location icon</string>
    <string name="content_description_logo">logo</string>
    <string name="msg_support_email">support@kantechprogramming.com</string>
    <string name="menu_item_filters">Filters</string>
    <string name="menu_item_manage_customers">Manage Customers</string>
    <string name="menu_item_manage_drivers">Manage Drivers</string>
    <string name="menu_item_manage_orders">Manage Orders</string>
    <string name="menu_item_home">Home</string>
    <string name="title_cost_payment">Payment Charged</string>
    <string name="action_driver_orders_previous">Previous Day</string>
    <string name="action_driver_orders_next">Next Day</string>
    <string name="action_driver_orders_select_day">Select Day</string>
    <string name="title_customer">Customer</string>
    <string name="title_manage_customers">Manage Customers</string>
    <string name="title_customer_details">Customer Details</string>
    <string name="title_driver_details">Driver Details</string>
    <string name="title_add_new_customer">Add New Customer</string>
    <string name="title_add_new_order">Add New Order</string>
    <string name="title_manage_drivers">Manage Drivers</string>
    <string name="title_select_a_date">Select A Date</string>

    <string name="error_company_is_required">Company is required</string>
    <string name="error_contact_name_is_required">Contact name is required</string>
    <string name="error_phone_number">Contact phone number is not valid</string>
    <string name="error_msg">The new customer form has errors.</string>

    <string name="alert_title_add_new_customer">Add the following new customer?</string>


    <string name="alert_title_assign_driver">Assign the following driver?</string>

    <string name="toast_driver_not_selected">Driver Not Selected</string>
    <string name="toast_driver_selected">Driver Selected</string>

    <string name="nav_admin_show_all">Show All</string>

    <string name="btn_select_order">Select Order</string>
    <string name="btn_pickup_complete">Pickup Complete</string>
    <string name="btn_delivery_complete">Delivery Complete</string>

    <string name="title_app_driver_application">Driver Application</string>

    <string name="msg_approval_failed">Approval failed ...</string>
    <string name="msg_driver_notification">You will be notified when driver approval is complete.</string>
    <string name="msg_signing_in">Signing in ...</string>
    <string name="msg_sign_in_complete">Sign in complete</string>
    <string name="msg_sign_in_cancelled">Sign in cancelled</string>
    <string name="msg_checking_status">Checking status ...</string>
    <string name="msg_customer_saved">The new customer has been successfully saved</string>
    <string name="app_title_admin">Admin Application</string>
    <string name="msg_splash_initializing_app">Initializing application ...</string>
    <string name="app_title_driver">Driver Application</string>
    <string name="btn_details">DETAILS</string>
    <string name="btn_live_map">LIVE MAP</string>
    <string name="msg_charged">Your credit card will be charged:</string>
    <string name="alert_charging">charging credit card ...</string>
    <string name="alert_select_date">Select A Date</string>
    <string name="app_title_user">User Application</string>
    <string name="title_user_registration">User Registration</string>
    <string name="content_description_app_logo">app logo</string>
    <string name="btn_create_order">Create Order</string>
    <string name="content_description_order_icon">order icon</string>
    <string name="nav_item_order_info">ORDER INFO</string>
    <string name="nav_item_payment">PAYMENT</string>
    <string name="content_description_payment_icon">payment icon</string>
    <string name="nav_item_success">SUCCESS</string>
    <string name="content_description_success_icon">success icon</string>
    <string name="msg_payment_received">PAYMENT RECEIVED</string>
    <string name="msg_success_notification">You will receive a notification when a driver has been assigned to your order.</string>
    <string name="content_description_home_icon">home icon</string>
    <string name="msg_this_order_is_complete">This order is complete.</string>
    <string name="msg_you_have_no_orders_to_show">You have no orders to show.</string>
    <string name="title_full_name">Full Name</string>
    <string name="title_phone_no">Phone No</string>
    <string name="content_description_place_icon">place icon</string>
    <string name="btn_register">REGISTER</string>
    <string name="alert_verifying_credit_card">validating credit card ...</string>
    <string name="msg_payments_are_not_live">Payments are not live!</string>
    <string name="alert_fetching">fetching distance ...</string>
    <string name="title_order_tracker">Order Tracker</string>
    <string name="msg_no_network">You don not have a network connection!</string>
    <string name="toast_delivery_location_not_selected">Delivery Location Not Selected</string>
    <string name="toast_pickup_location_not_selected">Pickup Location Not Selected</string>
    <string name="toast_invalid_card_number">The card number or cvc is invalid</string>
</resources>
