<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_driver_orders_previous"
        android:icon="@drawable/ic_chevron_left_white_24dp"
        android:title="@string/action_driver_orders_previous"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_driver_orders_next"
        android:icon="@drawable/ic_chevron_right_white_24dp"
        android:title="@string/action_driver_orders_next"
        android:orderInCategory="200"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_driver_orders_select_date"
        android:icon="@drawable/ic_date_range_white_24dp"
        android:title="@string/action_driver_orders_select_day"
        android:orderInCategory="300"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="1000"
        app:showAsAction="never"/>
</menu>