<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:src="@drawable/ic_nav_details_fade"
                android:contentDescription="@string/content_description_order_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nav_item_order_info"
                android:textColor="@color/colorWhiteFade" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:src="@drawable/ic_nav_payment_fade"
                android:contentDescription="@string/content_description_payment_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nav_item_payment"
                android:textColor="@color/colorWhiteFade" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="@dimen/icon_width_height"
                android:layout_height="@dimen/icon_width_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_16dp"
                android:src="@drawable/ic_nav_success"
                android:contentDescription="@string/content_description_success_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nav_item_success"
                android:textColor="@color/colorWhite" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="16dp"
        android:gravity="center_vertical"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/msg_payment_received"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/tv_user_checkout_success_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:gravity="center"
            android:text="@string/msg_success_notification"
            android:textColor="@color/colorRed" />

        <ImageView
            android:id="@+id/iv_user_checkout_home"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_home_primary"
            android:contentDescription="@string/content_description_home_icon" />



    </LinearLayout>


</LinearLayout>